# MarginGuard

./: Cargo.toml  Dockerfile  EVALUATION.md  README.md  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: ci.yml
crates/marginguard-ai/: Cargo.toml
crates/marginguard-ai/src/: advice.rs  advisor.rs  error.rs  lib.rs  llm.rs
crates/marginguard-ai/tests/: advisor.rs
crates/marginguard-api/: Cargo.toml
crates/marginguard-api/src/: context.rs  dto.rs  error.rs  lib.rs  mutation.rs  query.rs  schema.rs  subscription.rs
crates/marginguard-api/tests/: graphql.rs
crates/marginguard-core/: Cargo.toml
crates/marginguard-core/src/: command.rs  config.rs  engine.rs  error.rs  event.rs  insurance.rs  lib.rs  margin.rs  ports.rs
crates/marginguard-core/tests/: engine.rs
crates/marginguard-infra/: Cargo.toml
crates/marginguard-infra/src/: bus.rs  lib.rs  oracle.rs  pg.rs  store.rs
crates/marginguard-infra/tests/: pipeline.rs
crates/marginguard-node/: Cargo.toml
crates/marginguard-node/benches/: risk_bench.rs
crates/marginguard-node/src/: config.rs  lib.rs  main.rs  simulate.rs  startup.rs  telemetry.rs
crates/marginguard-node/tests/: server.rs
crates/marginguard-resilience/: Cargo.toml
crates/marginguard-resilience/src/: breaker.rs  clock.rs  lib.rs  limiter.rs  retry.rs  timeout.rs
crates/marginguard-resilience/tests/: resilience.rs
crates/marginguard-types/: Cargo.toml
crates/marginguard-types/src/: error.rs  ids.rs  lib.rs  market.rs  money.rs  position.rs  risk.rs
crates/marginguard-types/tests/: types.rs
migrations/: 0001_init.sql
monitoring/: prometheus.yml
postman/: MarginGuard.postman_collection.json
