[workspace]
resolver = "2"
members = [
    "crates/marginguard-types",
    "crates/marginguard-resilience",
    "crates/marginguard-core",
    "crates/marginguard-ai",
    "crates/marginguard-infra",
    "crates/marginguard-api",
    "crates/marginguard-node",
]
exclude = ["target"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["Abhijeet Ashok Muneshwar <openingknots@gmail.com>"]
repository = "https://github.com/ABHIJEET-MUNESHWAR/MarginGuard"
description = "A perpetual-futures margin, funding, and liquidation risk engine in Rust: cross/isolated margin, mark-price-driven liquidation waterfall with ADL, an insurance fund, proptest solvency invariants, and a generative-AI liquidation-risk advisor with graceful fallback."

[workspace.dependencies]
# --- async runtime ---
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"

# --- serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- errors ---
thiserror = "1"
anyhow = "1"

# --- GraphQL + web ---
axum = { version = "0.8", features = ["macros"] }
async-graphql = { version = "7", features = ["chrono"] }
async-graphql-axum = "7"
tower = { version = "0.5", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"] }

# --- database (optional, behind feature) ---
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
] }

# --- AI / HTTP client (optional, behind feature) ---
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# --- observability ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.14"

# --- config ---
dotenvy = "0.15"
clap = { version = "4.5", features = ["derive", "env"] }

# --- concurrency / parallelism ---
rayon = "1.10"
parking_lot = "0.12"

# --- time ---
chrono = { version = "0.4", features = ["serde"] }

# --- testing / bench ---
criterion = { version = "0.5" }
proptest = "1.5"
mockall = "0.12"

# --- internal crates ---
marginguard-types = { path = "crates/marginguard-types" }
marginguard-resilience = { path = "crates/marginguard-resilience" }
marginguard-core = { path = "crates/marginguard-core" }
marginguard-ai = { path = "crates/marginguard-ai" }
marginguard-infra = { path = "crates/marginguard-infra" }
marginguard-api = { path = "crates/marginguard-api" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
debug = true
strip = false
