[package]
name = "marginguard-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Generative-AI liquidation-risk advisor for MarginGuard with a deterministic heuristic default and an optional LLM backend that degrades gracefully."

[dependencies]
marginguard-types = { workspace = true }
marginguard-resilience = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, optional = true }

[features]
default = []
llm = ["dep:reqwest"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
