[package]
name = "marginguard-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The MarginGuard risk engine: margin math, funding accrual, and the liquidation waterfall with ADL and an insurance fund."

[dependencies]
marginguard-types = { workspace = true }
marginguard-resilience = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
mockall = { workspace = true }
proptest = { workspace = true }
