[package]
name = "marginguard-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MarginGuard composition root: CLI, axum GraphQL server, telemetry, and a deterministic market-scenario simulator."
default-run = "marginguard"

[[bin]]
name = "marginguard"
path = "src/main.rs"

[[bench]]
name = "risk_bench"
harness = false

[dependencies]
marginguard-types = { workspace = true }
marginguard-resilience = { workspace = true }
marginguard-core = { workspace = true }
marginguard-ai = { workspace = true }
marginguard-infra = { workspace = true }
marginguard-api = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

[features]
default = []
llm = ["marginguard-ai/llm"]
postgres = ["marginguard-infra/postgres"]

[dev-dependencies]
criterion = { workspace = true }
tower = { workspace = true }
serde_json = { workspace = true }
