[package]
name = "marginguard-resilience"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Reusable fault-tolerance primitives for MarginGuard: injectable clock, timeout, retry with backoff, rate limiter, and circuit breaker."

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }
