[package]
name = "marginguard-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Domain vocabulary for MarginGuard: fixed-point money types, positions, market state, and risk events."

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
